@@ -1,3 +1,6 @@
+2013-10-03 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Fix bad quota tuning options (ticket #148).
+
 2013-09-27 Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Similar error messages are grouped (ticket #103).
 	* Supplementary path for external commands is configurable (ticket #12).
